@@ -1,7 +1,7 @@
 #!/bin/bash
 
 pushd $(dirname $0)
+	echo "XTerm|xterm|xterm|Open Google|google-chrome|xdg-open https://www.google.com|New Email|mail_new|xdg-email" | yadqt --type=traymenu --title="Run Apps" --fromstdin --icon=system-run --timeout=1000 --remember &
 	echo -e "Open Home\nuser-home\nxdg-open ${HOME}"|cat - ./traydata | yadqt --type=traymenu --title="Open Folders" --fromstdin --ipseparator=newline --icon=system-file-manager --timeout=1000 --body="Open folders" &
-	echo "XTerm|xterm|xterm|Open Google|google-chrome|xdg-open https://www.google.com|New Email|mail_new|xdg-email" | yadqt --type=traymenu --title="Run Apps" --fromstdin --icon=system-run --timeout=1000 &
 	./localapps &
 popd
